developer/src/kmc-package/test/fixtures/invalid/error_invalid_author_email_multiple.kps
<?xml version="1.0" encoding="utf-8"?>
<Package>
  <System>
    <KeymanDeveloperVersion>15.0.266.0</KeymanDeveloperVersion>
    <FileVersion>7.0</FileVersion>
  </System>
  <Info>
    <!-- blank name -->
    <Name URL="">Invalid Email Address</Name>
    <Copyright URL="">© 2019 National Research Council Canada</Copyright>
    <Author URL="mailto:Eddie.Santos@nrc-cnrc.gc.ca, example@example.com">Eddie Antonio Santos</Author>
    <Version>1.0</Version>
  </Info>
  <Files>
    <File>
      <Name>basic.kmx</Name>
      <Description>Keyboard Basic</Description>
      <CopyLocation>0</CopyLocation>
      <FileType>.kmx</FileType>
    </File>
  </Files>
  <Keyboards>
    <Keyboard>
      <Name>Basic</Name>
      <ID>basic</ID>
      <Version>1.0</Version>
      <Languages>
        <Language ID="km">Central Khmer (Khmer, Cambodia)</Language>
      </Languages>
    </Keyboard>
  </Keyboards>
</Package>
